; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/et131x/extr_et1310_phy.c_ET1310_PhyAdvertise1000BaseT.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/et131x/extr_et1310_phy.c_ET1310_PhyAdvertise1000BaseT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.et131x_adapter = type { i32 }

@PHY_1000_CONTROL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ET1310_PhyAdvertise1000BaseT(%struct.et131x_adapter* %0, i32 %1) #0 {
  %3 = alloca %struct.et131x_adapter*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.et131x_adapter* %0, %struct.et131x_adapter** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.et131x_adapter*, %struct.et131x_adapter** %3, align 8
  %7 = load i32, i32* @PHY_1000_CONTROL, align 4
  %8 = call i32 @MiRead(%struct.et131x_adapter* %6, i32 %7, i32* %5)
  %9 = load i32, i32* %5, align 4
  %10 = and i32 %9, -769
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %4, align 4
  switch i32 %11, label %20 [
    i32 128, label %12
    i32 130, label %13
    i32 129, label %16
    i32 131, label %19
  ]

12:                                               ; preds = %2
  br label %23

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = or i32 %14, 512
  store i32 %15, i32* %5, align 4
  br label %23

16:                                               ; preds = %2
  %17 = load i32, i32* %5, align 4
  %18 = or i32 %17, 256
  store i32 %18, i32* %5, align 4
  br label %23

19:                                               ; preds = %2
  br label %20

20:                                               ; preds = %2, %19
  %21 = load i32, i32* %5, align 4
  %22 = or i32 %21, 768
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %20, %16, %13, %12
  %24 = load %struct.et131x_adapter*, %struct.et131x_adapter** %3, align 8
  %25 = load i32, i32* @PHY_1000_CONTROL, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @MiWrite(%struct.et131x_adapter* %24, i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @MiRead(%struct.et131x_adapter*, i32, i32*) #1

declare dso_local i32 @MiWrite(%struct.et131x_adapter*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
